arr/service-prowlarr.yaml
apiVersion: v1
kind: Service
metadata:
  name: prowlarr
  namespace: arr
spec:
  selector:
    app: prowlarr
  ports:
    - name: http
      port: 9696
      targetPort: 9696
