arr/service-radarr.yaml
apiVersion: v1
kind: Service
metadata:
  name: radarr
  namespace: arr
spec:
  selector:
    app: radarr
  ports:
    - name: http
      port: 7878
      targetPort: 7878
