arr/service-sabnzbd.yaml
apiVersion: v1
kind: Service
metadata:
  name: sabnzbd
  namespace: arr
spec:
  selector:
    app: sabnzbd
  ports:
    - name: http
      port: 8080
      targetPort: 8080
