arr/service-sonarr.yaml
apiVersion: v1
kind: Service
metadata:
  name: sonarr
  namespace: arr
spec:
  selector:
    app: sonarr
  ports:
    - name: http
      port: 8989
      targetPort: 8989
